Remove WorkerEventQueue::EventDispatcherTask

EventDispatcherTask is the last blocker of ExecutionContextTask removal.
It holds an Event and WorkerEventQueue instance, and makes the Event
cancellable.

This CL reimplements the cancellation mechanism without the custom
ExecutionContextTask and removes the custom one.

BUG=630139

Review-Url: https://codereview.chromium.org/2209613002
Cr-Commit-Position: refs/heads/master@{#409732}

Former-commit-id: 3697042db3e1ee433545c06bed5aee95657ebc16